@@ -1,3 +1,8 @@
+2015-11-30  Natalia Portillo  <claunia@claunia.com>
+
+	* FletcherContext.cs:
+	  Disabled Fletcher as it is abnormally slow.
+
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.Checksums.csproj:
